[gd_scene load_steps=2 format=3 uid="uid://drwgaquxkiqi3"]

[ext_resource type="Script" path="res://scripts/number_input.gd" id="1_6nt88"]

[node name="NumberInput" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_6nt88")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -66.5
offset_top = -56.0
offset_right = 66.5
offset_bottom = 56.0
grow_horizontal = 2
grow_vertical = 2

[node name="Value" type="Label" parent="HBoxContainer"]
layout_mode = 2
text = "0"

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2

[node name="AddButton" type="Button" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Up
"

[node name="SubtractButton" type="Button" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Down"

[connection signal="pressed" from="HBoxContainer/VBoxContainer/AddButton" to="." method="_on_add_button_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/SubtractButton" to="." method="_on_subtract_button_pressed"]
